--- a/scss/index.html
+++ b/scss/index.html
@@ -7,4 +7,16 @@
         <link rel="stylesheet" href="../../css/main.css">
         <title>Document</title>
     </head>
+    <body>
+        <header class="site-header">
+            <div class="container site-header__container">
+                <a href="./index.html"><img src="../images/coffeeroasters.svg" alt="logo-img"></a>
+                <ul class="site-header__items">
+                    <li class="site-header__item">Home</li>
+                    <li class="site-header__item">About Us</li>
+                    <li class="site-header__item">Create Your Plan</li>
+                </ul>
+            </div>
+        </header>
+    </body>
 </html>
