--- a/scss/index.html
+++ b/scss/index.html
@@ -8,14 +8,31 @@
         <title>Document</title>
     </head>
     <body>
-        <header class="site-header">
-            <div class="container site-header__container">
-                <a href="./index.html"><img src="../images/coffeeroasters.svg" alt="logo-img"></a>
-                <ul class="site-header__items">
-                    <li class="site-header__item">Home</li>
-                    <li class="site-header__item">About Us</li>
-                    <li class="site-header__item">Create Your Plan</li>
-                </ul>
+        <header class="site-header container">
+            <div class="site-header__container">
+                <nav class="site-header_navigatsiya">
+                    <ul class="site-header__items">
+                        <div class="blok1">
+                            <li>
+                                <a href="#"  class="site-header__logo">myteam</a>
+                            </li>
+                        </div>
+                        <div class="blok2">
+                            <li class="site-header__item">home</li>
+                            <li class="site-header__item">about</li>
+                        </div>
+                    </ul>
+                    <button><a href="#" class="contact">contact us</a></button>
+                </nav>  
+                <div class="site-header__find">
+                    <div class="find-left left">
+                        Find the<br>best <span class="talent">talent</span> 
+                    </div>
+                    <div class="find-right"> 
+                        <span class="blur-line"></span> 
+                        <p>Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.</p>
+                    </div>
+                </div>
             </div>
         </header>
     </body>
