--- a/scss/index.html
+++ b/scss/index.html
@@ -35,5 +35,57 @@
                 </div>
             </div>
         </header>
+        <section class="build container">
+            <div class="build__title">
+                <span class="blur-line section1"></span> 
+                Build & manage distributed teams like no one else.
+            </div>  
+            <div class="build__list">
+                <ul>
+                    <li>
+                        <h5>Experienced Individuals</h5>
+                        <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+                    </li>
+                    <li>
+                        <h5>Experienced Individuals</h5>
+                        <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+                    </li>
+                    <li>
+                        <h5>Experienced Individuals</h5>
+                        <p class="for-after">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+                    </li>
+                </ul>
+            </div>          
+        </section>
+        <section class="result container">
+            <div class="result__title">
+                <p>
+                    Delivering real results for top companies. Some of our<span class="success"> success stories.</span>
+                </p>
+            </div>
+            <ul class="result__lists">
+                <li class="result__list">
+                    <p>“The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</p>
+                    <div class="info">
+                        <h5>Kady Baker</h5>
+                        <p>Product Manager at Bookmark</p>
+                    </div>
+                </li>
+                <li class="result__list">
+                    <p>“The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</p>
+                    <div class="info">
+                        <h5>Kady Baker</h5>
+                        <p>Product Manager at Bookmark</p>
+                    </div>
+                </li>
+                <li class="result__list">
+                    <p>“The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</p>
+                    <div class="info">
+                        <h5>Kady Baker<h5>
+                        <p>Product Manager at Bookmark</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
     </body>
 </html>
