--- a/scss/index.html
+++ b/scss/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="site-header container">
-            <div class="site-header__container">
+            <div class="site-header__container ">
                 <nav class="site-header_navigatsiya">
                     <ul class="site-header__items">
                         <div class="blok1">
@@ -36,26 +36,26 @@
             </div>
         </header>
         <section class="build container">
-            <div class="build__title">
-                <span class="blur-line section1"></span> 
-                Build & manage distributed teams like no one else.
-            </div>  
-            <div class="build__list">
-                <ul>
-                    <li>
-                        <h5>Experienced Individuals</h5>
-                        <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
-                    </li>
-                    <li>
-                        <h5>Experienced Individuals</h5>
-                        <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
-                    </li>
-                    <li>
-                        <h5>Experienced Individuals</h5>
-                        <p class="for-after">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
-                    </li>
-                </ul>
-            </div>          
+                <div class="build__title">
+                    <span class="blur-line section1"></span> 
+                    Build & manage distributed teams like no one else.
+                </div>  
+                <div class="build__list">
+                    <ul>
+                        <li>
+                            <h5>Experienced Individuals</h5>
+                            <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+                        </li>
+                        <li>
+                            <h5>Experienced Individuals</h5>
+                            <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+                        </li>
+                        <li>
+                            <h5>Experienced Individuals</h5>
+                            <p class="for-after">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+                        </li>
+                    </ul>
+                </div>        
         </section>
         <section class="result container">
             <div class="result__title">
@@ -86,6 +86,10 @@
                     </div>
                 </li>
             </ul>
+        </section>
+        <section class="ready">
+            <h3>Ready to get started?</h3>
+            <button class="ready__button">contact us</button>
         </section>
     </body>
 </html>
